# libcfile

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  README.static  acinclude.m4  appveyor.yml  autogen.sh  build.ps1  configure.ac  libcfile-wiki.ini  libcfile.ini  libcfile.pc.in  libcfile.spec.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh
.github/workflows/: build.yml  build_linux.yml  build_windows.yml  coverage.yml
.travis/: runtests.sh  script.sh
common/: Makefile.am  config.h.in  config_winapi.h
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libcfile.h.in
include/libcfile/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libcfile/: Makefile.am  libcfile.c  libcfile.rc.in  libcfile_definitions.h.in  libcfile_error.c  libcfile_error.h  libcfile_extern.h  libcfile_file.c  libcfile_file.h  libcfile_libcerror.h  libcfile_libclocale.h  libcfile_libcnotify.h  libcfile_libcstring.h  libcfile_libuna.h  libcfile_notify.c  libcfile_notify.h  libcfile_path.c  libcfile_path.h  libcfile_stream.c  libcfile_stream.h  libcfile_support.c  libcfile_support.h  libcfile_system_string.c  libcfile_system_string.h  libcfile_types.h  libcfile_unused.h  libcfile_winapi.c  libcfile_winapi.h
libcstring/: libcstring_definitions.h  libcstring_extern.h  libcstring_narrow_string.h  libcstring_support.c  libcstring_support.h  libcstring_system_string.h  libcstring_types.h  libcstring_unused.h  libcstring_wide_string.c  libcstring_wide_string.h
m4/: libcerror.m4  libcstring.m4  tests.m4
manuals/: Makefile.am  libcfile.3  libcpath.3
msvscpp/: Makefile.am  libcfile.sln
msvscpp/cfile_test_error/: cfile_test_error.vcproj
msvscpp/cfile_test_file/: cfile_test_file.vcproj
msvscpp/cfile_test_file_read/: cfile_test_file_read.vcproj
msvscpp/cfile_test_file_seek/: cfile_test_file_seek.vcproj
msvscpp/cfile_test_file_write/: cfile_test_file_write.vcproj
msvscpp/cfile_test_get_version/: cfile_test_get_version.vcproj
msvscpp/cfile_test_notify/: cfile_test_notify.vcproj
msvscpp/cfile_test_read/: cfile_test_read.vcproj
msvscpp/cfile_test_seek/: cfile_test_seek.vcproj
msvscpp/cfile_test_stream_read/: cfile_test_stream_read.vcproj
msvscpp/cfile_test_stream_seek/: cfile_test_stream_seek.vcproj
msvscpp/cfile_test_stream_write/: cfile_test_stream_write.vcproj
msvscpp/cfile_test_support/: cfile_test_support.vcproj
msvscpp/cfile_test_system_string/: cfile_test_system_string.vcproj
msvscpp/cfile_test_winapi/: cfile_test_winapi.vcproj
msvscpp/cfile_test_write/: cfile_test_write.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libcfile_dll/: libcfile_dll.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
tests/: Makefile.am  cfile_test_error.c  cfile_test_file.c  cfile_test_file_read.c  cfile_test_file_seek.c  cfile_test_file_write.c  cfile_test_functions.c  cfile_test_functions.h  cfile_test_get_version.c  cfile_test_getopt.c  cfile_test_getopt.h  cfile_test_libcerror.h  cfile_test_libcfile.h  cfile_test_libclocale.h  cfile_test_libcnotify.h  cfile_test_libcstring.h  cfile_test_libuna.h  cfile_test_macros.h  cfile_test_memory.c  cfile_test_memory.h  cfile_test_notify.c  cfile_test_read  cfile_test_read.c  cfile_test_seek  cfile_test_seek.c  cfile_test_stream_read.c  cfile_test_stream_seek.c  cfile_test_stream_write.c  cfile_test_support.c  cfile_test_system_string.c  cfile_test_unused.h  cfile_test_winapi.c  cfile_test_write  cfile_test_write.c  cpath_test_libcpath.h  cpath_test_libcstring.h  cpath_test_path.c  generate_test_inputs.sh  pkgbuild.sh  runtests.sh  (+22 more)
tests/input/: test.raw
tests/input/set1/: block_size_file  small_file  test.raw
