MSVSCPP_FILES = \
	cfile_test_error/cfile_test_error.vcproj \
	cfile_test_file/cfile_test_file.vcproj \
	cfile_test_get_version/cfile_test_get_version.vcproj \
	cfile_test_notify/cfile_test_notify.vcproj \
	cfile_test_read/cfile_test_read.vcproj \
	cfile_test_seek/cfile_test_seek.vcproj \
	cfile_test_write/cfile_test_write.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libuna/libuna.vcproj \
	libcfile.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

