MSVSCPP_FILES = \
	cfile_test_error/cfile_test_error.vcproj \
	cfile_test_file/cfile_test_file.vcproj \
	cfile_test_notify/cfile_test_notify.vcproj \
	cfile_test_support/cfile_test_support.vcproj \
	cfile_test_system_string/cfile_test_system_string.vcproj \
	cfile_test_winapi/cfile_test_winapi.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libuna/libuna.vcproj \
	libcfile.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

